accessibility: update to 98%

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -13,40 +13,40 @@
     <header>
         <div class="header">
             <div class="nav-logo">
-                <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png"></a>
+                <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
             </div>
 
             <nav class="nav-menu">
                 <div class="nav-item">
-                    <a href="#" title="Return Home"><img src="assets/images/nav-home.png" alt="Home Icon"></a>
+                    <a href="#" title="Return Home"><img src="assets/images/nav-home.png" alt="" role="presentation"></a>
                     <p><a href="#" title="Return Home">Home</a></p>
                 </div>
                 <div class="nav-item">
-                    <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon"></a>
+                    <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="" role="presentation"></a>
                     <p><a href="#" title="View My Work History">LinkedIn</a></p>
                 </div>
                 <div class="nav-item">
-                    <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="GitHub Icon"></a>
+                    <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="" role="presentation"></a>
                     <p><a href="#" title="Review My Portfolio Projects">GitHub</a></p>
                 </div>
                 <div class="nav-item">
-                    <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Resume Icon"></a>
+                    <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="" role="presentation"></a>
                     <p><a href="#" title="Check My Resume">Resume</a></p>
                 </div>
                 <div class="nav-item">
-                    <a href="#" title="Message Me"><img src="assets/images/nav-contact.png" alt="Contact Icon"></a>
+                    <a href="#" title="Message Me"><img src="assets/images/nav-contact.png" alt="" role="presentation"></a>
                     <p><a href="#" title="Message Me">Contact</a></p>
                 </div>
                 <div class="nav-item">
-                    <a href="#" title="Open Mobile Menu"><img src="assets/images/nav-hamburger-icon.png" alt="Hamburger Icon"></a>
+                    <a href="#" title="Open Mobile Menu"><img src="assets/images/nav-hamburger-icon.png" alt="Open the mobile menu."></a>
                 </div>
             </nav>
         </div>
     </header>
 
     <div class="hero-section">
-        <div><h2>print("<span class="header-green">Awesome</span> apps.")</h2></div>
-        <div><img src="assets/images/hero-laptop.png" alt="laptop image"></div>
+        <div><h1>print("<span class="header-green">Awesome</span> apps.")</h1></div>
+        <div><img src="assets/images/hero-laptop.png" aria-hidden="true"></div>
         <div>
             <h2><span class="header-green">Software Developer</span> and Educator.</h2>
             <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, 
@@ -55,14 +55,17 @@
     </div>
 
     <div class="problems-section">
-        <div class="problems-1"><img src="assets/images/problems-photo.png" alt="photo of selecting one out of many job applicants"></div>
+        <div class="problems-1"><img src="assets/images/problems-photo.png" aria-hidden="true"></div>
         <div class="problems-2">
             <h2>Hiring is Hard!</h2>
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
-                <li><a href="#" title="View my skills and certifications">Want to reduce onboarding <span class="bold-green">time</span> and <span class="bold-green">costs</span>?</a></li>
-                <li><a href="#" title="Review my portfolio projects">Need candidates with real-world <span class="bold-green">experience</span>?</a></li>
-                <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="bold-green">culture alignment</span>?</a></li>
+                <li>Want to reduce onboarding <span class="bold-normal">time</span> and <span class="bold-normal">costs</span>? 
+                <a class="anchor-green" href="" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
+                <li>Need candidates with real-world <span class="bold-normal">experience</span>? 
+                <a class="anchor-green" href="" title="Review My Portfolio Projects">Browse my portfolio projects today</a>.</li>
+                <li>Trouble ensuring strong <span class="bold-normal">culture alignment</span>? 
+                <a class="anchor-green" href="" title="Read My Testimonials">Check feedback from my clients and mentors</a>.</li>
             </ul>
         </div>
     </div>
@@ -77,7 +80,7 @@
         </div>
 
         <div class="solutions-2">
-            <img src="assets/images/solutions-photo.png" alt="photo of myself programming">
+            <img src="assets/images/solutions-photo.png" aria-hidden="true">
             <a class="button solutions-cta" href="#">Work With Me</a>     
         </div>
     </div></div>
@@ -87,7 +90,7 @@
         <div class="benefits-2">
             <div class="benefits-2-item">
                 <div class="benefits-info">
-                    <img src="assets/images/benefits-frontend.png">
+                    <img src="assets/images/benefits-frontend.png" aria-hidden="true">
                     <h6>Maximized Engagement</h6>
                     <p>Empower your business with solutions that captivate and convert.
                     By leveraging analytics, I create designs that increase user loyalty.</p>
@@ -104,7 +107,7 @@
 
             <div class="benefits-2-item">
                 <div class="benefits-info">
-                    <img src="assets/images/benefits-backend.png">
+                    <img src="assets/images/benefits-backend.png" aria-hidden="true">
                     <h6>Scalability & Security</h6>
                     <p>Deliver products that grow with your business. 
                         I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
@@ -121,7 +124,7 @@
 
             <div class="benefits-2-item">
                 <div class="benefits-info">
-                    <img src="assets/images/benefits-credentials.png">
+                    <img src="assets/images/benefits-credentials.png" aria-hidden="true">
                     <h6>Industry Certifications</h6>
                     <p>Gain access to reliable solutions built on verified industry knowledge. 
                         My expertise delivers results aligned with proven standards.</p>    
@@ -139,12 +142,12 @@
             <div class="portfolio-1">
                 <h2>My Recent Work</h2>
                 <p>Explore apps I've built for clients and myself. Want to learn more? 
-                    <span class="underline-orange"><a href="#" title="Message Me">Let's Connect</a></span></p>
+                    <a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</p>
             </div>
 
             <div class="portfolio-2">
                 <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
                     <div class="project-2">
                         <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
@@ -152,21 +155,21 @@
                 </div>
 
                 <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
                     <div class="project-2">
                         <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
                     </div>
                 </div>
                 <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
                     <div class="project-2">
                         <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
                     </div>
                 </div>
                 <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
                     <div class="project-2">
                         <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
@@ -178,17 +181,19 @@
         <div class="testimonials-section">
             <div class="testimonials-1">
                 <h2>Testimonials</h2>
-                <p>What people have said about the apps I've crafted...</p>
+                <p>What people have said about the apps I've crafted. 
+                    <a class="anchor-green" href="#" title="Message Me">Let's Work Together</a>.
+                </p>
             </div>
 
             <div class="testimonials-2">
-                <div class="quote-1"><img src="assets/images/testimonial-person.png" alt="photo-of-advocate"></div>
+                <div class="quote-1"><img src="assets/images/testimonial-person.png" aria-hidden="true"></div>
 
                 <div class="quote-2">
-                    <div><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="previous-testimonial"></a></div>
+                    <div><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="Press to open previous testimonial."></a></div>
                     <div><a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
                         Est proculdubio generis designatoris cui confidere potes."</blockquote></a></div>
-                    <div><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="next-testimonial"></a></div>
+                    <div><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="Press to open next testimonial."></a></div>
                 </div>
 
                 <div class="quote-3">
@@ -201,7 +206,7 @@
 
     <footer><div class="footer">
         <div class="footer-1">
-            <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png"></a>
+            <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
         </div>
         <div class="footer-2">
             <h1>Let's Collaborate</h1>
@@ -210,9 +215,9 @@
             <a class="button footer-cta" href="#">Message Me About Your Needs</a>
         </div>
         <div class="footer-3">
-            <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon"></a>
-            <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="GitHub Icon"></a>
-            <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Resume Icon"></a>
+            <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="Open my LinkedIn."></a>
+            <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="Open my GitHub."></a>
+            <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Open my resume."></a>
         </div>
     </div></footer>
 
