accessibility: replace div overuse with ul

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -16,43 +16,57 @@
                 <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
             </div>
 
-            <nav class="nav-menu">
-                <div class="nav-item">
-                    <a href="#" title="Return Home"><img src="assets/images/nav-home.png" alt="" role="presentation"></a>
-                    <p><a href="#" title="Return Home">Home</a></p>
-                </div>
-                <div class="nav-item">
-                    <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="" role="presentation"></a>
-                    <p><a href="#" title="View My Work History">LinkedIn</a></p>
-                </div>
-                <div class="nav-item">
-                    <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="" role="presentation"></a>
-                    <p><a href="#" title="Review My Portfolio Projects">GitHub</a></p>
-                </div>
-                <div class="nav-item">
-                    <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="" role="presentation"></a>
-                    <p><a href="#" title="Check My Resume">Resume</a></p>
-                </div>
-                <div class="nav-item">
-                    <a href="#" title="Message Me"><img src="assets/images/nav-contact.png" alt="" role="presentation"></a>
-                    <p><a href="#" title="Message Me">Contact</a></p>
-                </div>
-                <div class="nav-item">
-                    <a href="#" title="Open Mobile Menu"><img src="assets/images/nav-hamburger-icon.png" alt="Open the mobile menu."></a>
-                </div>
+            <nav aria-label="Main navigation">
+                <ul>
+                    <li>
+                        <a href="#" title="Return Home">
+                            <img src="assets/images/nav-home.png" alt="" role="presentation">
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" title="View My Work History">
+                            <img src="assets/images/nav-linkedin.png" alt="" role="presentation">
+                            <span>LinkedIn</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" title="Review My Portfolio Projects">
+                            <img src="assets/images/nav-github.png" alt="" role="presentation">
+                            <span>GitHub</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" title="Check My Resume">
+                            <img src="assets/images/nav-resume.png" alt="" role="presentation">
+                            <span>Resume</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" title="Message Me">
+                            <img src="assets/images/nav-contact.png" alt="" role="presentation">
+                            <span>Contact</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" title="Open Mobile Menu">
+                            <img src="assets/images/nav-hamburger-icon.png" alt="Open the mobile menu.">
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
 
-    <div class="hero-section">
-        <div><h1>print("<span class="header-green">Awesome</span> apps.")</h1></div>
-        <div><img src="assets/images/hero-laptop.png" aria-hidden="true"></div>
-        <div>
-            <h2><span class="header-green">Software Developer</span> and Educator.</h2>
-            <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, 
-                integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
-        </div>
-    </div>
+    <section class="hero-section">
+        <ul>
+            <li><h1>print("<span class="header-green">Awesome</span> apps.")</h1></li>
+            <li><img src="assets/images/hero-laptop.png" aria-hidden="true"></li>
+            <li><h2><span class="header-green">Software Developer</span> and Educator.</h2></li>
+            <li><p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, 
+                integrating and creating robust <span class="highlight-orange">APIs</span>.</p></li>
+        </ul>
+    </section>
 
     <div class="problems-section">
         <div class="problems-1"><img src="assets/images/problems-photo.png" aria-hidden="true"></div>
