--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -68,36 +68,37 @@
         </ul>
     </section>
 
-    <div class="problems-section">
-        <div class="problems-1"><img src="assets/images/problems-photo.png" aria-hidden="true"></div>
+    <section class="problems-section">
+        <figure class="problems-1"><img src="assets/images/problems-photo.png" alt="An illustration showing the challenge of hiring the right candidate."></figure>
+    
         <div class="problems-2">
             <h2>Hiring is Hard!</h2>
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
                 <li>Want to reduce onboarding <span class="bold-normal">time</span> and <span class="bold-normal">costs</span>? 
-                <a class="anchor-green" href="" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
+                <a class="anchor-green" href="#" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
                 <li>Need candidates with real-world <span class="bold-normal">experience</span>? 
-                <a class="anchor-green" href="" title="Review My Portfolio Projects">Browse my portfolio projects today</a>.</li>
+                <a class="anchor-green" href="#" title="Review My Portfolio Projects">Browse my portfolio projects today</a>.</li>
                 <li>Trouble ensuring strong <span class="bold-normal">culture alignment</span>? 
-                <a class="anchor-green" href="" title="Read My Testimonials">Check feedback from my clients and mentors</a>.</li>
+                <a class="anchor-green" href="#" title="Read My Testimonials">Check feedback from my clients and mentors</a>.</li>
             </ul>
         </div>
-    </div>
+    </section>
 
-    <div class="solutions-section"><div class="solutions">   
-        <div class="solutions-1">
-            <h2>Hi! I'm Jonathan.</h2>
-            <h6>I've completed <span class="underline-orange">5+ projects</span> for clients as a contractor, and I'm here to help you.</h6>
-            <p>My superpower is <span class="underline-orange">proactivity</span>. Three years teaching sharpened my ability to spot challenges early and act decisively, 
-                fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and integrated in-demand technologies like <span class="underline-orange">AI</span>.</p>
-            <p><span class="underline-orange">I GOT you.</span></p>      
-        </div>
+    <section class="solutions-section"><div class="solutions">   
+        <ul class="solutions-1">
+            <li><h2>Hi! I'm Jonathan.</h2></li>
+            <li><h6>I've completed <span class="underline-orange">5+ projects</span> for clients as a contractor, and I'm here to help you.</h6></li>
+            <li>My superpower is <span class="underline-orange">proactivity</span>. Three years teaching sharpened my ability to spot challenges early and act decisively, 
+                fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and integrated in-demand technologies like <span class="underline-orange">AI</span>.</li>
+            <li><span class="underline-orange">I GOT you</span>.</li>      
+        </ul>
 
-        <div class="solutions-2">
+        <figure class="solutions-2">
             <img src="assets/images/solutions-photo.png" aria-hidden="true">
-            <a class="button solutions-cta" href="#">Work With Me</a>     
-        </div>
-    </div></div>
+            <a class="button solutions-cta" href="#">Work With Me</a>
+        </figure>
+    </div></section>
 
     <div class="benefits-section"><div class="benefits">
         <div class="benefits-1"><h2>Instant Value Provided</h2></div>
@@ -192,48 +193,48 @@
             </div>
         </div>
 
-        <div class="testimonials-section">
-            <div class="testimonials-1">
+        <section class="testimonials-section">
+            <ul class="testimonials-1"><li>
                 <h2>Testimonials</h2>
                 <p>What people have said about the apps I've crafted. 
                     <a class="anchor-green" href="#" title="Message Me">Let's Work Together</a>.
                 </p>
-            </div>
+            </li></ul>
 
-            <div class="testimonials-2">
-                <div class="quote-1"><img src="assets/images/testimonial-person.png" aria-hidden="true"></div>
+            <ul class="testimonials-2">
+                <li><img class="img-bigger" src="assets/images/testimonial-person.png" aria-hidden="true"></li>
 
-                <div class="quote-2">
-                    <div><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="Press to open previous testimonial."></a></div>
-                    <div><a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
-                        Est proculdubio generis designatoris cui confidere potes."</blockquote></a></div>
-                    <div><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="Press to open next testimonial."></a></div>
-                </div>
+                <li>
+                    <a href="#" title="Previous Advocate"><img class="img-smaller" src="assets/images/testimonials-left.png" alt="Press to open previous testimonial."></a>
+                    <a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
+                        Est proculdubio generis designatoris cui confidere potes."</blockquote></a>
+                    <a href="" title="Next Advocate"><img class="img-smaller" src="assets/images/testimonials-right.png" alt="Press to open next testimonial."></a>
+                </li>
 
-                <div class="quote-3">
+                <li>
                     <h6><span class="underline-orange">Jane Doe</span></h6>
                     <p><span class="bold-normal">Work Title</span>, Some Company</p>
-                </div>
-            </div>
-        </div>
+                </li>
+            </ul>
+        </section>
     </main>
 
-    <footer><div class="footer">
-        <div class="footer-1">
-            <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
-        </div>
-        <div class="footer-2">
+    <footer><ul>
+        <li>
+            <a href="#" title="Barron Bytes | Software Developer" aria-label="Return to homepage">
+                <img class="img-bigger" src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
+        </li>
+        <li>
             <h1>Let's Collaborate</h1>
-            <p>Ready to discuss full-time opportunities or freelance projects? 
-                I'm here to deliver results for you.</p>
-            <a class="button footer-cta" href="#">Message Me About Your Needs</a>
-        </div>
-        <div class="footer-3">
-            <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="Open my LinkedIn."></a>
-            <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="Open my GitHub."></a>
-            <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Open my resume."></a>
-        </div>
-    </div></footer>
+            <p>Ready to discuss full-time opportunities or freelance projects? I'm here to deliver results for you.</p>
+            <a class="button footer-cta" href="#" aria-label="Message me about your needs">Message Me About Your Needs</a>
+        </li>
+        <li>
+            <a href="#" title="View My Work History"><img class="img-smaller"  src="assets/images/nav-linkedin.png" alt="Open my LinkedIn."></a>
+            <a href="#" title="Review My Portfolio Projects"><img class="img-smaller"  src="assets/images/nav-github.png" alt="Open my GitHub."></a>
+            <a href="#" title="Check My Resume"><img class="img-smaller"  src="assets/images/nav-resume.png" alt="Open my resume."></a>
+        </li>
+    </ul></footer>
 
 </body>
 </html>
