accessibility: replace div overuse with ul

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -88,7 +88,7 @@
     <section class="solutions-section"><div class="solutions">   
         <ul class="solutions-1">
             <li><h2>Hi! I'm Jonathan.</h2></li>
-            <li><h6>I've completed <span class="underline-orange">5+ projects</span> for clients as a contractor, and I'm here to help you.</h6></li>
+            <li><h6>I've completed <span class="underline-orange">0+ projects</span> for clients as a contractor, and I'm here to help you.</h6></li>
             <li>My superpower is <span class="underline-orange">proactivity</span>. Three years teaching sharpened my ability to spot challenges early and act decisively, 
                 fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and integrated in-demand technologies like <span class="underline-orange">AI</span>.</li>
             <li><span class="underline-orange">I GOT you</span>.</li>      
@@ -100,98 +100,76 @@
         </figure>
     </div></section>
 
-    <div class="benefits-section"><div class="benefits">
-        <div class="benefits-1"><h2>Instant Value Provided</h2></div>
-        <div class="benefits-2">
-            <div class="benefits-2-item">
-                <div class="benefits-info">
+    <section class="benefits-section">
+        <ul class="benefits-1">
+            <li><h2>Instant Value Provided</h2></li>
+        </ul>
+
+        <ul class="benefits-2">
+            <li><ul class="benefits-item">
+                <li>
                     <img src="assets/images/benefits-frontend.png" aria-hidden="true">
                     <h6>Maximized Engagement</h6>
                     <p>Empower your business with solutions that captivate and convert.
                     By leveraging analytics, I create designs that increase user loyalty.</p>
-                </div>
-                <div>
+                </li>
+                <li>
                     <p class="bold-normal">Languages:</p>
-                    <p>JavaScript</p>
-                </div>
-                <div>
+                    <p>Something</p>
+                </li>
+                <li>
                     <p class="bold-normal">Frameworks:</p>
-                    <p>Angular, React</p>
-                </div>
-            </div>
+                    <p>Something, Something</p>
+                </li>
+            </ul></li>
 
-            <div class="benefits-2-item">
-                <div class="benefits-info">
+            <li><ul class="benefits-item">
+                <li>
                     <img src="assets/images/benefits-backend.png" aria-hidden="true">
                     <h6>Scalability & Security</h6>
                     <p>Deliver products that grow with your business. 
                         I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
-                </div>
-                <div>
+                </li>
+                <li>
                     <p class="bold-normal">Languages:</p>
-                    <p>Python, Java</p>                        
-                </div>
-                <div>
+                    <p>Something, Something</p>                        
+                </li>
+                <li>
                     <p class="bold-normal">Frameworks:</p>
-                    <p>Django, Spring Boot</p>                        
-                </div>
-            </div>
+                    <p>Something, Something</p>                        
+                </li>
+            </ul></li>
 
-            <div class="benefits-2-item">
-                <div class="benefits-info">
+            <li><ul class="benefits-item">
+                <li>
                     <img src="assets/images/benefits-credentials.png" aria-hidden="true">
                     <h6>Industry Certifications</h6>
                     <p>Gain access to reliable solutions built on verified industry knowledge. 
                         My expertise delivers results aligned with proven standards.</p>    
-                </div>
-                <div>
+                </li>
+                <li>
                     <p class="bold-normal">Cloud:</p>
                     <p>AWS Certified Cloud Pratitioner</p>        
-                </div>
-            </div>
-        </div>
-    </div></div>
+                </li>
+            </ul></li>
+        </ul>
+    </section>
 
     <main class="main">
-        <div class="portfolio-section">
-            <div class="portfolio-1">
-                <h2>My Recent Work</h2>
-                <p>Explore apps I've built for clients and myself. Want to learn more? 
-                    <a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</p>
-            </div>
+        <section class="portfolio-section">
+            <ul class="portfolio-1">
+                <li><h2>My Recent Work</h2></li>
+                <li>Explore apps I've built for clients and myself. Want to learn more? 
+                    <a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</li>
+            </ul>
 
-            <div class="portfolio-2">
-                <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
-                    <div class="project-2">
-                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
-                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
-                    </div>
-                </div>
-
-                <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
-                    <div class="project-2">
-                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
-                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
-                    </div>
-                </div>
-                <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
-                    <div class="project-2">
-                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
-                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
-                    </div>
-                </div>
-                <div class="project group">
-                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></div>
-                    <div class="project-2">
-                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
-                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <ul class="portfolio-2">
+                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
+                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
+                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
+                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
+            </ul>
+        </section>
 
         <section class="testimonials-section">
             <ul class="testimonials-1"><li>
