--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -164,10 +164,18 @@
             </ul>
 
             <ul class="portfolio-2">
-                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
-                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
-                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
-                <li class="group"><a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a></li>
+                <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
+                    <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                </li>
+                <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
+                    <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                </li>
+                <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
+                    <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                </li>
+                <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
+                    <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                </li>            
             </ul>
         </section>
 
