accessibility: project card visibility

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -166,15 +166,19 @@
             <ul class="portfolio-2">
                 <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
                     <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                    <span class="project-item-default" aria-hidden="true"></span> <!-- Placeholder for dynamic content -->
                 </li>
                 <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
                     <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                    <span class="project-item-default" aria-hidden="true"></span> <!-- Placeholder for dynamic content -->
                 </li>
                 <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
                     <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                    <span class="project-item-default" aria-hidden="true"></span> <!-- Placeholder for dynamic content -->
                 </li>
                 <li class="group" onclick="toggleProject(this)" aria-controls="projectText" aria-expanded="false">
                     <a href="#"><img src="assets/images/project-photo.jpg" alt="Project description."></a>
+                    <span class="project-item-default" aria-hidden="true"></span> <!-- Placeholder for dynamic content -->
                 </li>            
             </ul>
         </section>
