accessibility and internal links

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -49,9 +49,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" title="Open Mobile Menu">
+                        <button class="nav-toggle" aria-label="toggle navigation">
                             <img src="assets/images/nav-hamburger-icon.png" alt="Open the mobile menu.">
-                        </a>
+                        </button>
                     </li>
                 </ul>
             </nav>
@@ -76,11 +76,11 @@
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
                 <li>Want to reduce onboarding <span class="bold-normal">time</span> and <span class="bold-normal">costs</span>? 
-                <a class="anchor-green" href="#" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
+                <a class="anchor-green" href="#explore" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
                 <li>Need candidates with real-world <span class="bold-normal">experience</span>? 
-                <a class="anchor-green" href="#" title="Review My Portfolio Projects">Browse my portfolio projects today</a>.</li>
+                <a class="anchor-green" href="#experience" title="Review My Portfolio Projects">Browse my portfolio projects today</a>.</li>
                 <li>Trouble ensuring strong <span class="bold-normal">culture alignment</span>? 
-                <a class="anchor-green" href="#" title="Read My Testimonials">Check feedback from my clients and mentors</a>.</li>
+                <a class="anchor-green" href="#testimonials" title="Read My Testimonials">Check feedback from my clients and mentors</a>.</li>
             </ul>
         </div>
     </section>
@@ -100,7 +100,7 @@
         </figure>
     </div></section>
 
-    <section class="benefits-section">
+    <section id="explore" class="benefits-section">
         <ul class="benefits-1">
             <li><h2>Instant Value Provided</h2></li>
         </ul>
@@ -156,7 +156,7 @@
     </section>
 
     <main class="main">
-        <section class="portfolio-section">
+        <section id="experience" class="portfolio-section">
             <ul class="portfolio-1">
                 <li><h2>My Recent Work</h2></li>
                 <li>Explore apps I've built for clients and myself. Want to learn more? 
@@ -183,7 +183,7 @@
             </ul>
         </section>
 
-        <section class="testimonials-section">
+        <section id="testimonials" class="testimonials-section">
             <ul class="testimonials-1"><li>
                 <h2>Testimonials</h2>
                 <p>What people have said about the apps I've crafted. 
