--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -12,12 +12,12 @@
 
     <header>
         <div class="header">
-            <div class="nav-logo">
+            <figure class="nav-logo">
                 <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png" alt="Return to homepage."></a>
-            </div>
+            </figure>
 
             <nav aria-label="Main navigation">
-                <ul>
+                <ul class="menu-normal">
                     <li>
                         <a href="#" title="Return Home">
                             <img src="assets/images/nav-home.png" alt="" role="presentation">
@@ -48,6 +48,8 @@
                             <span>Contact</span>
                         </a>
                     </li>
+                </ul>
+                <ul class="menu-mobile">
                     <li>
                         <button class="nav-toggle" aria-label="toggle navigation">
                             <img src="assets/images/nav-hamburger-icon.png" alt="Open the mobile menu.">
