problems-section: responsive

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -74,8 +74,8 @@
         <figure class="problems-1"><img src="assets/images/problems-photo.png" alt="An illustration showing the challenge of hiring the right candidate."></figure>
     
         <div class="problems-2">
-            <h2>Hiring is Hard!</h2>
-            <h6>Finding the right skill and fit is key.</h6>
+            <p class="section-title">Hiring is Hard!</p>
+            <p class="section-subtitle">Finding the right skill and fit is key.</p>
             <ul>
                 <li>Want to reduce onboarding <span class="bold-normal">time</span> and <span class="bold-normal">costs</span>? 
                 <a class="anchor-green" href="#explore" title="View My Job Ready Credentials">Explore my skills and certifications</a>.</li>
