solutions-section: responsive

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -89,15 +89,15 @@
 
     <section class="solutions-section"><div class="solutions">   
         <ul class="solutions-1">
-            <li><h2>Hi! I'm Jonathan.</h2></li>
-            <li><h6>I've completed <span class="underline-orange">0+ projects</span> for clients as a contractor, and I'm here to help you.</h6></li>
+            <li><p class="section-title">Hi! I'm Jonathan.</p></li>
+            <li><p class="section-subtitle">I've completed <span class="underline-orange">0+ projects</span> for clients as a contractor, and I'm here to help you.</p></li>
             <li>My superpower is <span class="underline-orange">proactivity</span>. Three years teaching sharpened my ability to spot challenges early and act decisively, 
                 fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and integrated in-demand technologies like <span class="underline-orange">AI</span>.</li>
             <li><span class="underline-orange">I GOT you</span>.</li>      
         </ul>
 
         <figure class="solutions-2">
-            <img src="assets/images/solutions-photo.png" aria-hidden="true">
+            <img class="solutions-figure" src="assets/images/solutions-photo.png" aria-hidden="true">
             <a class="button solutions-cta" href="#">Work With Me</a>
         </figure>
     </div></section>
