testimonials-section: responsive

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -187,25 +187,22 @@
 
         <section id="testimonials" class="testimonials-section">
             <ul class="testimonials-1"><li>
-                <h2>Testimonials</h2>
-                <p>What people have said about the apps I've crafted. 
-                    <a class="anchor-green" href="#" title="Message Me">Let's Work Together</a>.
-                </p>
+                <p class="section-title">Testimonials</p>
+                <p>What people have said about the apps I've crafted.</p> 
+                <p><a class="anchor-green" href="#" title="Message Me">Let's Work Together</a>.</p>
             </li></ul>
 
             <ul class="testimonials-2">
                 <li><img class="img-bigger" src="assets/images/testimonial-person.png" aria-hidden="true"></li>
-
+                <li><a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
+                        Est proculdubio generis designatoris cui confidere potes."</blockquote></a></li>
                 <li>
-                    <a href="#" title="Previous Advocate"><img class="img-smaller" src="assets/images/testimonials-left.png" alt="Press to open previous testimonial."></a>
-                    <a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
-                        Est proculdubio generis designatoris cui confidere potes."</blockquote></a>
-                    <a href="" title="Next Advocate"><img class="img-smaller" src="assets/images/testimonials-right.png" alt="Press to open next testimonial."></a>
+                    <p class="section-subtitle">Jane Doe</p>
+                    <p><span class="bold-normal">Work Title</span> | Some Company</p>
                 </li>
-
                 <li>
-                    <h6><span class="underline-orange">Jane Doe</span></h6>
-                    <p><span class="bold-normal">Work Title</span>, Some Company</p>
+                    <span><a class="anchor-green" href="#" title="Previous Advocate">&larr; Previous</a></span>
+                    <span><a class="anchor-green" href="" title="Next Advocate">Next &rarr;</a></span>
                 </li>
             </ul>
         </section>
