portfolio-section: responsive

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -160,9 +160,9 @@
     <main class="main">
         <section id="experience" class="portfolio-section">
             <ul class="portfolio-1">
-                <li><h2>My Recent Work</h2></li>
-                <li>Explore apps I've built for clients and myself. Want to learn more? 
-                    <a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</li>
+                <li><p class="section-title">My Recent Work</p></li>
+                <li>Explore apps I've built for clients and myself. Want to learn more?</li>
+                <li><a class="anchor-green" href="#" title="Message Me">Let's Connect</a>.</li>
             </ul>
 
             <ul class="portfolio-2">
