benefits-section: responsive

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -111,7 +111,7 @@
             <li><ul class="benefits-item">
                 <li>
                     <img src="assets/images/benefits-frontend.png" aria-hidden="true">
-                    <h6>Maximized Engagement</h6>
+                    <p class="section-subtitle">Maximized Engagement</p>
                     <p>Empower your business with solutions that captivate and convert.
                     By leveraging analytics, I create designs that increase user loyalty.</p>
                 </li>
@@ -128,7 +128,7 @@
             <li><ul class="benefits-item">
                 <li>
                     <img src="assets/images/benefits-backend.png" aria-hidden="true">
-                    <h6>Scalability & Security</h6>
+                    <p class="section-subtitle">Scalability & Security</p>
                     <p>Deliver products that grow with your business. 
                         I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
                 </li>
@@ -145,7 +145,7 @@
             <li><ul class="benefits-item">
                 <li>
                     <img src="assets/images/benefits-credentials.png" aria-hidden="true">
-                    <h6>Industry Certifications</h6>
+                    <p class="section-subtitle">Industry Certifications</p>
                     <p>Gain access to reliable solutions built on verified industry knowledge. 
                         My expertise delivers results aligned with proven standards.</p>    
                 </li>
